On export dataset, made date fields excel readable. Fixed a bug on time series graphs where y-axis ticks with very long values were not aligned correctly.

--- a/src/webtsainterface/static/css/style.css
+++ b/src/webtsainterface/static/css/style.css
@@ -100,7 +100,9 @@
   shape-rendering: crispEdges;
 }
 
-.focus .seriesID {cursor: pointer}
+.focus .seriesID {
+    cursor: pointer
+}
 
 .line {
   fill: none;
